--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -28,8 +28,10 @@
       <ol>
         <li class="li"><a href="#libros">ENLACE A LIBROS</a></li>
         <li class="li"><a href="#intro">INTRODUCCIÓN</a></li>
-        <li class="li"><a href="#proceso">PROCESO</a></li>
-        <li class="li"><a href="#"></a></li>
+        <li class="li"><a href="#01">PROCESO LECTIO</a></li>
+        <li class="li"><a href="#02">PROCESO MEDITATIO</a></li>
+        <li class="li"><a href="#03">PROCESO ORATIO</a></li>
+        <li class="li"><a href="#04">PROCESO CONTEMPLATIO</a></li>
        
       </ol>
       </div>
@@ -149,101 +151,99 @@
   </div>
   </section>
   <!-- ******************************************************************************* -->
-   <section id="proceso">
-    <div class="lectio">
-      <h2>PROCESO</h2>
-      <H3>LECTIO ¿QUÉ DIJO EL SEÑOR?</H3>
-      <ol>
-        <li>Preparación: <br> 
-          Momento, Lugar y Estado de ánimo<br>
-          Oración: Que me mueve a leer este texto <br>
-          Y Cual es mi finalidad <br><br><b>
+<section id="01">
+  <h2 class="titulo">LECTIO ¿Qué dijo el Señor?</h2>
+  <ol> 
+    <h2 class="subtitulo">ELEGIR EL TEXTO</h2>
+  
+    <OL class="cita">
+      <LI >JERUSALÉN</LI>
+      <LI>LATINOAMERICANA</LI>
+      <LI>VERSIÓN GRIEGA (LXX- TISCHENDORF)</LI>
+      <LI>VERSIÓN LATINA (VULGATA)</LI>
+      <LI>VERSIÓN JUDÍA (KADOSH)</LI>
+      <LI>NVI</LI>
+      <LI>RV60</LI>
+      <li>otras</li>
+    </OL>
 
-             "En la medida que sea santo haré el bien"</b> <br>Charles de Foucauld</li> <br>
-
-        <li>LA LECTURA DEL TEXTO </li>
-        De los textos disponibles, elegir uno, entendiendo los demás <br><br>
-        Versiones<br><br>
-          LATINOAMERICANA<br>
-          JERUSALÉN<br>
-          VERSIÓN GRIEGA (LXX- TISCHENDORF)<br>
-          VERSIÓN LATINA (VULGATA)<br>
-          VERSIÓN JUDÍA (KADOSH)<br>
-          NVI<br>
-          RV60<br><br>
-
-        <li>EL AUTOR</li>
-            profesión<br>
-            Llamamiento-conversión<br>
-            vida<br>
-            misión<br><br>
-        <li>EL EVANGELIO <br>propósito del autor, origen, fecha de composición</li><br>
-        <li>COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL <br>
-          LOS DESTINATARIOS <br>
-          Situación vital <br>
-              factores internos<br>
-                fuentes<br>
-              factores externos<br>
-                situación social<br>
-                situación religiosa<br>
-            que esperaban del Señor</li><br>
-
-        <li>GÉNERO LITERARIO (de la pericopa )<br>
-          Cómo fue comunicado el mensaje</li><br>
-        <li>IDEAS CENTRALES DEL EVANGELIO <br>
-          que se ha dicho a través del tiempo <br>
-          que nos enseña la iglesia <br>
-          su relación con el posible mensaje de este texto <br>
-          como llego a mis conclusiones personales</li><br>
-
-        <li>EN EL CONTEXTO <br>con la enseñanzas de todo el Nuevo Testamento <br>DEl Antiguo Testamento <br>De la
-          Iglesia a través del tiempo (historia, patristica) <br>Del magisterio (Documentos, catecismo) </li>
-        <li>BIBLIOGRAFÍA, referencias</li><br>
-        <li>CUÁL (intuyo) FUE EL MENSAJE TRANSMITIDO POR EL AUTOR a sus destinatarios <br> Recordemos Que es evangelio
-          es una Buena Noticia, algo que necesitan los oyentes en ese momento específico.
-        </li><br>
-       
+    <h2 class="subtitulo">LA LECTURA DEL TEXTO</h2>
+  
+    <h2 class="subtitulo">EL AUTOR</h2>
+      <ol class="cita">
+        <li>PROFESIÓN</li>
+        <li>LLAMAMIENTO-CONVERSIÓN</li>
+        <li>MISIÒN</li>
+        <li>VIDA</li>
       </ol>
-      <h3>MEDITATIO ¿QUÉ ME DICE EL SEÑOR?</h3>
+ 
+    <h2 class="subtitulo">EL TEXTO </h2>
       <ol>
-        <li>Cuál era la relación Realidad-Mensaje</li>
-        <li>Y la relación realidad-mensaje-Cristificación</li>
-        <li>Qué similitud hay entre la realidad humano-personal de los destinatarios bíblicos y nosotros hoy</li>
-        <li>Que me dice a mí o/a nosotros</li>
-        <li></li>
+        <li>PROPÓSITO DEL AUTOR</li>
+        <li>ORIGEN DEL TEXTO</li>
+        <li>FECHA DE COMPOSICIÓN</li>
+        <li>IDEAS CENTRALES DEL TEXTO</li>
       </ol>
-      <h3>ORATIO ¿QUÉ RESPONDO AL SEÑOR?</h3>
+  
+    <h2 class="subtitulo">CONTEXTO DE LOS DESTINATARIOS</h2>
       <ol>
-        <li>Cuáles han sido las respuestas a través de la historia a la misma invitación</li>
-        <li>Como responden hoy los hombres desde la fe</li>
-        <li>Y cómo responden las personas desde su experiencia personal</li>
-        <li>Cómo responden mis próximos desde la fe</li>
-        <li>Y cómo desde su experiencia personal</li>
-        <li>Que respondo personalmente y en comunidad</li>
-        <li></li>
+        <li>FACTORES INTERNOS</li>
+        <li>FACTORES EXTERNOS </li>
+        <li>QUÉ EXPECTATIVAS TENIAN</li>
       </ol>
 
-      <h3>CONTEMPLATIO <br>
-        ¿QUÉ ME MUESTRA EL SEÑOR DE SÍ?</h3>
-      <ol>
-        <li>Cómo actúa el Señor</li>
-        <li>En Qué circunstancias</li>
-        <li>Cuál sería la finalidad</li>
-        <li>Cuál es la invitación de conversión que me hace</li>
-        <li>¿Cuál sería el cambio de mi pensamiento, porque no soy así?</li>
-        <li>Se armoniza con lo anteriormente contemplado</li>
-        <li>Que experiencias recojo de esta Lectio para una mejor comprensión de los textos Y DEL SEÑOR</li>
-        <li>Cómo se proyecta a la vida</li>
-        <li>Cómo aplicarlo a todas mis realidades</li>
-        <li>Cuáles son los pasos</li>
-        <li>Cómo compartirlo con mi entorno</li>
-        <li>Resumirlo en una oración de gracias, petición y de propósito de conversión </li>
-        <li>RECORDAR QUE TODO ES GRACIA POR ESO: <br>
-            HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPOSICIÓN</li>
-      </ol>
+    <h2 class="subtitulo">GÉNERO LITERARIO</h2>
+   
+    <h2 class="subtitulo">COMENTARIOS PATRÍSTICOS</h2>
+  
+    <h2 class="subtitulo">COMENTARIOS MODERNOS</h2>
+  
+    <h2 class="subtitulo">EL MENSAJE PARA LOS DESTINATARIOS</h2>
+ 
 
-    </div>
-  </section>
+  </ol>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="02">
+  <h2 class="subtitulo">MEDITATIO ¿Qué me dice el Señor?</h2>
+ 
+    <h2 class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</h2>
+    <h2 class="cita">RELACIÓN DE LOS DESTINATARIOS Y NOSOTROS</h2>
+    <h2 class="cita">QUE ME DICE A MI/NOSOTROS</h2>
+    <h2 class="cita">ARMONIA CON LO ANTERIORMENTE ORADO</h2>
+ 
+
+</section>
+<!-- ****************************************************************** -->
+<section id="03">
+  <h2 class="subtitulo">ORATIO ¿Qué respondo al Señor?</h2>
+  <ol> 
+    <h2 class="cita">RESPUESTAS A TRAVÉS DEL TIEMPO: LOS SANTOS</h2>
+    <h2 class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</h2>
+    <h2 class="cita">RESPUESTAS DE MI ENTORNO</h2>
+    <h2 class="cita">MI RESPUESTA</h2>
+    <h2 class="cita">COMO HACERLA REALIDAD Y VIDA</h2>
+  </ol>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="04">
+  <h2 class="subtitulo">CONTEMPLATIO ¿Qué me muestra el Señor?</h2>
+  <ol>
+    <li>COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
+    <li>MODELO DE CONVERSIÓN</li>
+    <li>COMO ME AYUDA A COMPRENDER MEJOR LOS TEXTOS </li>
+    <li>COMO ME AYUDA A CONOCER MEJOR AL SEÑOR</li>
+    <li>COMO APLICARLO A TODAS MIS REALIDADES</li>
+    <li>COMO COMPARTIRLO</li>
+    <li>CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
+    <li>HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
+
+  </ol>
+
+</section>
+<!-- ****************************************************************** -->
   </body>
 
 </html>
