--- a/lectio/mateo.html
+++ b/lectio/mateo.html
@@ -37,13 +37,9 @@
     <section id="1.1-17">
       <div>
         <h2>MATEO 1,1-17</h2>
-       
 
-<h2>LA LECTIO DIVINA</h2>
-
-<h3>LECTIO ¿QUÉ DIJO EL SEÑOR? <br>
- LA LECTURA DEL TEXTO ( DEFINIR EL TEXTO)</h3>
-
+<h3 class="titulo">LECTIO ¿QUÉ DIJO EL SEÑOR? </h3>
+<h4 class="subtitulo">LA LECTURA DEL TEXTO ( DEFINIR EL TEXTO)</h4>
  <ol>		
   <li>	JERUSALÉN	</li>
   <li>	 LATINOAMERICANA	</li>
@@ -56,7 +52,7 @@
   </ol>		
   
 
-<h4>COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL</h4>
+<h4 class="subtitulo">COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL</h4>
 <p>
 LOS DESTINATARIOS <br><br>
  Cuál era la situación vital<br>
@@ -67,7 +63,7 @@ Qué esperaban de Dios<br>
 Lo probable era la necesidad de paz. Interior al ser confirmados en su fe en Jesús y exterior al evitar la tragedia de
 la persecución.<br><br>
 
-EL AUTOR<br>
+<h3 class="subtitulo">EL AUTOR</h3><br>
 Mateo, uno de los doce apóstoles de Jesús, es una figura clave en el Nuevo Testamento. A continuación se presenta un resumen de lo que sabemos sobre él:<br><br>
 
  Identidad y Profesión<br>
@@ -97,7 +93,7 @@ Mateo es recordado no solo como uno de los doce apóstoles de Jesús, sino tambi
 </p>
 
 <p>
-EL EVANGELIO <br>
+<h4 class="subtitulo">EL EVANGELIO</h4>
 El Evangelio de Mateo se escribió aproximadamente entre el 70 y el 90 d.C. Esta fecha se basa en varios factores, entre los que se incluyen:<br><br>
 
  Factores Internos<br>
@@ -110,10 +106,10 @@ El Evangelio de Mateo se escribió aproximadamente entre el 70 y el 90 d.C. Esta
 
 En resumen, aunque no hay un consenso absoluto, la mayoría de los estudiosos del Nuevo Testamento sitúan la composición del Evangelio de Mateo en algún momento entre el 70 y el 90 d.C.<br><br>
 
-GÉNERO LITERARIO<br>
+<h4 class="subtitulo">GÉNERO LITERARIO</h4>
 Cómo fue comunicado el mensaje<br>
 Es una narración rítmica, esquemática con miras a ser fácilmente comprendida y hasta memorizada<br><br>
-.1.2.4 CUÁL SERÍA EL MENSAJE<br>
+<h4 class="subtitulo">EL MENSAJE </h4>
 La genealogía de Jesús, En 1,1 enfatiza que es hijo de David, en quien cumple Dios las promesas a su pueblo pero agrega
 hijo de Abraham en quien la promesa se extiende a toda la humanidad.
 Además, Muestra que la bendición a todos los hombres ya estaba presente por la presencia de extranjeros en los
@@ -126,7 +122,7 @@ BETSABÉ, amonita, mujer casada que fue seducida por David y madre de Salomón. 
 RUT, moabita, una mujer ejemplar pero separada del pueblo de Dios a causa de su origen. Rut 4-5<br>
 MARÍA, quién comparte con todas las anteriores una situación irregular, embarazada sin estar casada. Mt 1,19<br><br>
 
-IDEAS CENTRALES DEL EVANGELIO<br>
+<h4 class="subtitulo">IDEAS CENTRALES DEL EVANGELIO</h4>
 El Evangelio de Mateo presenta varias ideas fundamentales que han sido esenciales para la teología cristiana y para la comprensión de la vida y enseñanzas de Jesús. A continuación se enumeran algunas de las más importantes:<br><br>
 
  1. Jesús como el Mesías y cumplimiento de las profecías<br>
@@ -197,13 +193,10 @@ BIBLIOGRAFÍA<br>
 
 Estos libros y comentarios proporcionan una rica comprensión del Evangelio de Mateo<br> desde una perspectiva católica, integrando la exégesis bíblica con la teología, la tradición y la espiritualidad de la Iglesia Católica.<br><br>
 
-CUÁL FUE EL MENSAJE TRANSMITIDO POR EL AUTOR <br>
-Sí, puedo proporcionarte un resumen de los comentarios sobre Mateo 1:1-17 de algunos de los autores y fuentes mencionadas anteriormente. Este pasaje contiene la genealogía de Jesús, que es un texto rico en significado teológico e histórico. A continuación, te doy una visión general de algunos comentarios destacados:<br><br>
-
 </p>
 <!-- /////////////////////////////////////// -->
 
-<h3>Comentarios Patrísticos</h3>
+<h3 class="titulo">Comentarios Patrísticos</h3>
 <p>
 
 1<br> Catena Aurea de Santo Tomás de Aquino <br>
