--- a/Magisterio/index.html
+++ b/Magisterio/index.html
@@ -28,7 +28,7 @@
       <div>
         <ol>
           <li class="li"><a href="../Magisterio/EnciclicasYDocumentos.html">ENCICLICAS Y DOCUMENTOS</a></li>
-          <li class="li"><a href=""></a></li>
+          <li class="li"><a href="./DerechoCanonico.html">DERECHO CANÓNICO</a></li>
         </ol>
       </div>
     </section>
