--- a/oracion/compendioOracion.html
+++ b/oracion/compendioOracion.html
@@ -15,26 +15,28 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="ESCUDOCARM" class="logoC"></a>
-        <a href="../../index.html" class="nombre">INICIO </a>
+        <a href="../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
+    <h1 class="init">ORACIÓN</h1>
        <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</h3>
 
  
     <!-- ENLACE A PÁGINAS **********************************************************-->
-     <section id="libros">
+<section id="libros">
 
-       <div>
-         <H2 class="titulo">ENLACES A TEMAS</H2>
-         <ol>
-           <li class="li"><a href="../oracion/01Estacion.html">ESTACIÓN 1</a></li>
-      
-          </ol>
-        </div>
-      </section>
+  <div>
+    <H2 class="titulo">ENLACES A TEMAS</H2>
+    <ol>
+      <li class="li"><a href="../oracion/01Estacion.html">ESTACIÓN 1</a></li>
+      <li class="li"><a href="../oracion/02Estacion.html">ESTACIÓN 2</a></li>
+      <li class="li"><a href="../oracion/03Estacion.html">ESTACIÓN 3</a></li>
+
+    </ol>
+  </div>
+</section>
     <!-- ************************************************************ -->
    <section id="01">
 
