--- a/BlockGkc.html
+++ b/BlockGkc.html
@@ -1,141 +1,11 @@
-<section id="00">
-  <hr>
-  <h1> TEMAS</h1>
-  <div>
-    <ol>
-      <li class="li"><a href="#01">LECTIO</a></li>
-      <li class="li"><a href="#02">MEDITATIO</a></li>
-      <li class="li"><a href="#03">ORATIO</a></li>
-      <li class="li"><a href="#04">CONTEMPLATIO</a></li>
-    
-    </ol>
-
-  </div>
-</section>
-<!-- ****************************************************************** -->
-<section id="01">
-  <h2 class="titulo">LECTIO ¿Qué dijo el Señor?</h2>
-  <ol> 
-    <h2 class="subtitulo">ELEGIR EL TEXTO</h2>
-  
-    <OL class="cita">
-      <LI >JERUSALÉN</LI>
-      <LI>LATINOAMERICANA</LI>
-      <LI>VERSIÓN GRIEGA (LXX- TISCHENDORF)</LI>
-      <LI>VERSIÓN LATINA (VULGATA)</LI>
-      <LI>VERSIÓN JUDÍA (KADOSH)</LI>
-      <LI>NVI</LI>
-      <LI>RV60</LI>
-      <li>otras</li>
-    </OL>
-
-    <h2 class="subtitulo">LA LECTURA DEL TEXTO</h2>
-  
-    <h2 class="subtitulo">EL AUTOR</h2>
-      <ol class="cita">
-        <li>PROFESIÓN</li>
-        <li>LLAMAMIENTO-CONVERSIÓN</li>
-        <li>MISIÒN</li>
-        <li>VIDA</li>
-      </ol>
- 
-    <h2 class="subtitulo">EL TEXTO </h2>
-      <ol>
-        <li>PROPÓSITO DEL AUTOR</li>
-        <li>ORIGEN DEL TEXTO</li>
-        <li>FECHA DE COMPOSICIÓN</li>
-        <li>IDEAS CENTRALES DEL TEXTO</li>
-      </ol>
-  
-    <h2 class="subtitulo">CONTEXTO DE LOS DESTINATARIOS</h2>
-      <ol>
-        <li>FACTORES INTERNOS</li>
-        <li>FACTORES EXTERNOS </li>
-        <li>QUÉ EXPECTATIVAS TENIAN</li>
-      </ol>
-
-    <h2 class="subtitulo">GÉNERO LITERARIO</h2>
-   
-    <h2 class="subtitulo">COMENTARIOS PATRÍSTICOS</h2>
-  
-    <h2 class="subtitulo">COMENTARIOS MODERNOS</h2>
-  
-    <h2 class="subtitulo">EL MENSAJE PARA LOS DESTINATARIOS</h2>
- 
-
-  </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="02">
-  <h2 class="subtitulo">MEDITATIO ¿Qué me dice el Señor?</h2>
- 
-    <h2 class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</h2>
-    <h2 class="cita">RELACIÓN DE LOS DESTINATARIOS Y NOSOTROS</h2>
-    <h2 class="cita">QUE ME DICE A MI/NOSOTROS</h2>
-    <h2 class="cita">ARMONIA CON LO ANTERIORMENTE ORADO</h2>
- 
-
-</section>
-<!-- ****************************************************************** -->
-<section id="03">
-  <h2 class="subtitulo">ORATIO ¿Qué respondo al Señor?</h2>
-  <ol> 
-    <h2 class="cita">RESPUESTAS A TRAVÉS DEL TIEMPO: LOS SANTOS</h2>
-    <h2 class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</h2>
-    <h2 class="cita">RESPUESTAS DE MI ENTORNO</h2>
-    <h2 class="cita">MI RESPUESTA</h2>
-    <h2 class="cita">COMO HACERLA REALIDAD Y VIDA</h2>
-  </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="04">
-  <h2 class="subtitulo">CONTEMPLATIO ¿Qué me muestra el Señor?</h2>
-  <ol>
-    <li>COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
-    <li>MODELO DE CONVERSIÓN</li>
-    <li>COMO ME AYUDA A COMPRENDER MEJOR LOS TEXTOS </li>
-    <li>COMO ME AYUDA A CONOCER MEJOR AL SEÑOR</li>
-    <li>COMO APLICARLO A TODAS MIS REALIDADES</li>
-    <li>COMO COMPARTIRLO</li>
-    <li>CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
-    <li>HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
-
-  </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="05">
-  <h2 class="subtitulo"></h2>
-  <ol> 
-    li*7
-
-  </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="06">
-  <h2 class="subtitulo"></h2>
-  <ol> 
-    li*7
-
-  </ol>
-
-</section>
-<!-- ****************************************************************** -->
-<section id="07">
-  <h2 class="subtitulo"></h2>
-<ol> 
-  li*7
-
-</ol>
-
-</section>
-<!-- ****************************************************************** -->
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>BLOCK</h1>
 </body>
 </html>
