--- a/euangelium/biblia/PalabraDDios.html
+++ b/euangelium/biblia/PalabraDDios.html
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-<h1 class="init"></h1>
+<h1 class="init">PALABA DE DIOS</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
       <br>EDITH STEIN</h3>
 
@@ -29,7 +29,7 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="">INTRODUCCIÓN</a></li>
+      <li class="li"><a href="#01">INTRODUCCIÓN</a></li>
 
     </ol>
 
@@ -37,10 +37,33 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="01">
-  <h2 class="subtitulo"></h2>
-  <p>
+  <h2 class="subtitulo">PALABRA DE DIOS</h2>
 
-  </p>
+    <p> Vemos en la biblia, cosas que nos es difícil pensar que vienen de Dios, como
+      Relatos de matanzas despiadadas <br>
+      Jos 6:21 Consagraron al anatema todo lo que había en la ciudad, hombres y mujeres, jóvenes y viejos, bueyes,
+      ovejas y asnos, a filo de espada.<br>
+
+      Visiones de Dios diferentes<br>
+      Relatos que no tienen mucho de edificante. Las genealogías, 1Cro 1.1ss<br>
+      Hombres que se dirigen a Dios. Por ejemplo, Los salmos, <br>
+      Textos donde los autores enfatizan que son sus palabras Am 1.1, 1Co 7.10-12 Lc 1.1-4<br>
+      Errores y contradicciones. Errores científicos y contradicciones entre los textos<br><br>
+
+      Lo quiere enfatizar con decir que es PALABRA DE DIOS, es que el mensaje tiene su origen en Dios.<br>
+      La palabra es el elemento más representativo de la comunicación. Y la PALABRA por excelencia de Dios es Cristo.
+      Jn 1,1.14<br>
+      Eran palabra de Dios pera sus destinatarios, respondían a la necesidades de ellos, y lo es para nosotros porque
+      en ellas e revela algo de Dios. <br>El mensaje es la Palabra. En el mensaje Dios se da a conocer él, a través de
+      las necesidades y las palabras y acciones de los hombres. <br>
+      Así vemos como opone Pablo, letra-Espíritu, mundo-Espíritu, carne-Espíritu<br>
+      La palabra no es el texto, es Dios que se revela en y a través del mensaje, de lo que quisieron comunicar los
+      hombres con sus palabras y conceptos. La biblia contiene, no es, palabra de Dios.<br><br>
+
+      Se entreteje con inspiración. Es cuestión de enfoque, de relación. <br>
+      De Dios al hagiógrafo, llamamos inspiración<br>
+      Del hagiógrafo a nosotros, la llamamos Palabra de DIOS.<br>
+    </p>
 
 </section>
 <!-- ****************************************************************** -->
