--- a/liturgia/liturgia.html
+++ b/liturgia/liturgia.html
@@ -17,7 +17,7 @@
       </div>
     </header> <br><br>
   <!-- *************************************************************************** -->
-  <h1 class="init">OBJETIVO</h1>
+  <h1 class="init">LITURGIA</h1>
   <h3><b>Tanto el que evangeliza como los que escuchen, crezcan en el amor de Dios</b></h3>
   <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
         <br>EDITH STEIN</i></b></h3>
