--- a/Magisterio/EnciclicasYDocumentos.html
+++ b/Magisterio/EnciclicasYDocumentos.html
@@ -29,7 +29,9 @@
       <h1> TEMAS</h1>
       <div>
         <ol>
+          <li class="li"><a href="./DeiVerbum.html">DEI VERBUM</a></li>
           <li class="li"><a href="./FiduciaSupplicans.html">FIDUCIA SUPPLICANS</a></li>
+          <li class="li"><a href="./LumenGentium.html">LUMEN GENTIUM</a></li>
 
         </ol>
 
