--- a/doctrinaSocial/Agenda2030.html
+++ b/doctrinaSocial/Agenda2030.html
@@ -29,6 +29,7 @@
           <li class="li"><a href="#1">VERSIÓN DE LA ONU</a></li>
           <li class="li"><a href="#2">VERSIÓN CRITICA</a></li>
           <li class="li"><a href="#3">PLATAFORMA DE ACCIÓN DE BEIJING 1995</a></li>
+          <li class="li"><a href="#04">AGENDA 2045</a></li>
 
         </ol>
 
@@ -63,6 +64,9 @@ Alianzas para lograr los objetivos (ODS 17)<br>
      <!-- ********************************************** -->
      <section id="2">
       <h2>VERSIÓN CRÍTICA</h2>
+      <p>1974 en Bucarest, el mundo se está sobrepoblando. Compromete a todos los paises para iniciar el decrecimiento poblacional</p>
+      <p>1994 en EL Cairo, elaborar politicas globales de disminuir la natalidad en el mundo, en la medida 7.8 y 7.16 se pide legalizar el aborto</p>
+
       <p>Tiene dentro de cada objetivo, subobjetivgos llamados metas, y con lo que no esta de acuerdo esta perspectiva no es con los objetivos bien entendidos, sino con muchas de las metas</p>
       <p>Por ejemplo el objetivo 5, en la meta 6 dice: <br>"Garantizar el acceso universal a la salud sexual y reproductiva y los derechos reproductivos, según lo acordado en el Programa de Acción de la Conferencia Internacional sobre la Población y el Desarrollo y la Plataforma de Acción de Beijing y los documentos finales de sus conferencias de examen."</p>
       <p> La Meta 5.6 está alineada con compromisos internacionales ya establecidos, como la Conferencia Internacional sobre la Población y el Desarrollo de 1994 y la Plataforma de Acción de Beijing de 1995, que son hitos importantes en la lucha por los derechos de las mujeres.</p>
@@ -72,13 +76,23 @@ Alianzas para lograr los objetivos (ODS 17)<br>
      </section>
      <!-- ********************************************** -->
      <section id="3">
-      <h2>Plataforma de accion de Beijing</h2>
+      <h2>Plataforma de accion de Beijing <br> 1995 Conferencia Internacional de la Mujer</h2>
       <a href="https://www.acnur.org/fileadmin/Documentos/Publicaciones/2015/9853.pdf">Plataforma de accion de Beijing</a>
 <ol>
+  
   <li>106 Reconocer y afrontar las consecuencias que tienen para la salud los abortos peligrososReconocer y afrontar las consecuencias que tienen para la salud los abortos peligrosos. ... En ningún caso se debe promover el aborto como método de planificación de la familia. ... a reducir el recurso al aborto mediante la prestación de más amplios y mejores servicios de planificación de la familia. Las mujeres que tienen embarazos no deseados deben tener fácil acceso a información fidedigna y a asesoramiento comprensivo. Cualesquiera medidas o cambios relacionados con el aborto que se introduzcan en el sistema de salud se pueden determinar únicamente a nivel nacional o local de conformidad con el proceso legislativo nacional. En los casos en que el aborto no es contrario a la ley, los abortos deben realizarse en condiciones adecuadas. En todos los casos, las mujeres deberían tener acceso a servicios de calidad para tratar las complicaciones derivadas de abortos. Se deberían ofrecer con prontitud servicios de planificación de la familia, educación y asesoramiento postaborto que ayuden también a evitar la repetición de los abortos” ....</li>
   <li>116 entiende por aborto peligroso el procedimiento realizado por personas que no poseen las calificaciones necesarias</li>
+  <li>En el año 2023 se dijo que ya han fracasado en la agenda 2030 y se plantean una nueva agenda 2045</li>
       <p></p>
      </section>
      <!-- ********************************************** -->
+<section id="04">
+  <h2></h2>
+  <ol>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
+</section>
 </body>
 </html>
