--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -33,18 +33,19 @@
           <li class="li"><a href="#palabra">LITURGÍA DE LA PALABRA</a></li>
           <li class="li"><a href="#eucaristica">LITURGÍA EUCARÍSTICA</a></li>
           <li class="li"><a href="#despedida">RITOS DE DESPEDIDA</a></li>
+          <li class="li"><a href="#ocarm">RESUMENES OCARM</a></li>
         </ol>
 
       </div>
     </section>
     <!-- ////////////////////////////////////////////////// -->
      <section id="valida">
-      <h2>VALIDEZ DE UNA MISA</h2>
+      <h2>VALIDEZ DE UNA MISA  </h2>
       <p>      La validez de una misa en la Iglesia Católica depende de varios factores relacionados con: <br> <br>
-      1.	 la materia,  <br>
-      2.	la forma,  <br>
-      3.	la intención del celebrante,  <br>
-      4.	y la ordenación válida del sacerdote.  <br>
+      1.	 la materia, CIC can. 924 &2  <br>
+      2.	la forma, CEC 1352-1354 <br>
+      3.	la intención del celebrante, C.Trento Sesión 22 cap.1. CEC 1411  <br>
+      4.	y la ordenación válida del sacerdote. CIC can. 900 &1 <br>
       5.	Si cualquiera de estos elementos esenciales falta, la misa se considera inválida. <br> <br>
 
       Factores que hacen inválida una misa: <br> <br>
@@ -101,15 +102,15 @@
      </section>
     <!-- ////////////////////////////////////////////////// -->
     <section id="entrada">
-      <h2>ENTRADA</h2>
+      <h2>ENTRADA </h2>
       <ol>
-        <li>Al ingresar tener presente ante Quien estamos</li>
+        <li>Al ingresar tener presente ante Quién estamos</li>
         <li>El silencio</li>
         <li>Hacer un gesto de saludo</li>
         <li>"Para que al nombre de Jesús toda rodilla se doble en los cielos, en la tierra y en los abismos" (Filipenses 2:10).</li>
 
       </ol>
-      <h2>RITOS INICIALES</h2>
+      <h2>RITOS INICIALES IGMR 46-54</h2>
      
       <p>	La finalidad de estos actos es hacer que los fieles reunidos en la unidad construyan la comunión y se dispongan a escuchar la Palabra y a celebrar dignamente la Eucaristía. </p>
     <ol>
@@ -202,7 +203,7 @@
     </section>
     <!-- ////////////////////////////////////////////////// -->
     <section id="palabra">
-      <H2>LITURGIA DE LA PALABRA</H2>
+      <H2>LITURGIA DE LA PALABRA IGMR 55-71</H2>
       <li>INDICACIONES GENERALES
         <ul>
           <li>	El altar es Cristo por eso se hace una reverencia al pasar por allí	</li>
@@ -314,7 +315,7 @@
      </section>
 <!-- /////////////////////////////////////////// -->
 <section id="eucaristica">
-  <h2>LITURGIA EUCARÍSTICA</h2>
+  <h2>LITURGIA EUCARÍSTICA  IGMR 72-89</h2>
   <ol>
     <li>OFERTORIO</li>
     <li>PLEGARIA EUCARÍSTICA
@@ -439,7 +440,7 @@
 </section>
 <!-- /////////////////////////////////////// -->
 <section id="despedida">
-<H2>RITOS DE DESPEDIDA</H2>
+<H2>RITOS DE DESPEDIDA IGMR 90</H2>
 <OL>
   <LI>	BENDICIÓN: El sacerdote bendice a la asamblea</LI>
   <p>La bendición al finalizar la misa tiene un significado profundo y bíblico. Es un momento en el que el sacerdote, en representación de Cristo, imparte la bendición de Dios sobre los fieles antes de que se retiren a sus actividades cotidianas. Esta bendición, que puede ser trinitaria (en el nombre del Padre, del Hijo y del Espíritu Santo), no solo invoca protección, sino que envía a los fieles con la gracia de Dios para vivir su fe en el mundo. <br><br>
@@ -530,5 +531,35 @@ En resumen, la bendición tiene un propósito espiritual que trasciende la aprob
 El uso de "missa" en este contexto litúrgico refleja la misión que los fieles deben cumplir al salir de la iglesia: llevar el mensaje y las enseñanzas de Cristo al mundo, lo que convierte el término en algo más profundo que una simple despedida.<br><br>
 </P>
 </section>
+<!-- /////////////////////////////////////// -->
+ <section id="ocarm">
+  <!-- *************************************** -->
+  <h2 class="subtitulo">LITURGIA DE LA PALABRA</h2>
+<p>
+  LITURGIA DE LA PALABRA         		 IGMR 55-71 <br>
+*Las Lecturas: Se proclaman despacio, voz alta y entonación apropiada (respetando los signos gramaticales), se mira a la asamblea al decir de donde está tomada la lectura.<br>
+Se hace un momento de silencio y mirando a la asamblea se dice “Palabra de Dios”, respondemos “Te Alabamos Señor”.<br>
+Entre lecturas también se hace un silencio breve para que se interiorice lo escuchado.<br><br>
+
+No se dice salmo responsorial, ni nada que este en letras rojas, se mira a la asamblea cuando se hace la respuesta. <br>
+Aclamación antes del Evangelio: El Aleluya (excepto en Cuaresma) nos ponemos de pie.<br><br>
+
+A la lectura del evangelio respondemos “Gloria a ti Señor Jesús” y la homilía. El credo, que puede ser el Símbolo de los apóstoles, el Niceno-constantinopolitano o la renovación de las promesas bautismales. <br>
+La oración universal: se hace por la iglesia, los pastores y sus necesidades; por los gobernantes, necesitados y enfermos, finalmente por nosotros y la comunidad. <br><br>
+</p>
+   <p>Vulgata Latina o La Biblia de Gutenberg 1450-1455<br>
+    Medidas: 31x20-47 cm.<br>
+    2 tomos: 1282 pág.<br>
+    Peso: 28 kg 
+    </p>
+
+
+  <!-- *************************************** -->
+  <!-- *************************************** -->
+  <!-- *************************************** -->
+
+ </section>
+<!-- /////////////////////////////////////// -->
+
 </body>
 </html>
