--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -671,15 +671,14 @@
     humana, <br>
     Flp 2:8 se rebajó a sí mismo haciéndose obediente hasta la muerte, y muerte de cruz. <br>
     <br>
-    1Jn 4:2 ¿Quieren reconocer al espíritu de Dios? Todo espíritu que reconoce a Jesús como el Mesías que ha venido
-    <br>
-    en la carne, habla de parte de Dios. <br>
+    1Jn 4:2 ¿Quieren reconocer al espíritu de Dios? Todo espíritu que reconoce a Jesús como el Mesías que ha venido en la carne, habla de parte de Dios. 
     <br>
     <br>
     Heb 4:15 Nuestro sumo sacerdote no se queda indiferente ante nuestras debilidades, pues ha sido probado en todo
     <br>
     igual que nosotros, a excepción del pecado. <br>
     <br>
+    <p>En el concilio de Efeso se declara la maternidad divina, dandole a La Virgen el titulo de Madre de Dios, es para resaltar que Jesús es Dios desde su concepción</p>
     UN ejemplo, un alcalde es un título que no se lo da su madre, pero es correcto decir que tal persona es madre<br> del alcalde. <br>
     Los españoles cantaban una canción que decía <br>
     Si quiso y no pudo; no es Dios <br>
