--- a/latin/Nobilis.Phrases.html
+++ b/latin/Nobilis.Phrases.html
@@ -36,7 +36,7 @@
 
 <section id="00">
   <hr>
-  <h1> PERSONAS</h1>
+  <h1> PENSAMIENTOS</h1>
   <div>
     <ol>
       <li class="li"><a href="#0828">AGUSTIN DE HIPONA</a></li>
@@ -131,7 +131,7 @@
   <span>"OMNIS QUI CREDIT, COGITAT. QUIA FIDES, SI QUOD CREDITUR NON COGITATUR, NULLA EST."</span>
   <li>TODO EL QUE CREE, PIENSA. PORQUE LA FE, SI LO QUE SE CREE NO SE PIENSA, ES NULA.</li>
   <span>"VERITAS EST SICUT LEO; NON DEBES EAM DEFENDERE. LIBERA EAM; IPSA SE DEFENDET."</span>
-  <li>LA VERDAD ES COMO UN LEÓN; NO TIENES QUE DEFENDERLO. DÉJALA LIBRE; SE DEFENDERÁ A SÍ MISMA.</li>
+  <li>LA VERDAD ES COMO UN LEÓN; NO TIENES QUE DEFENDERLA. DÉJALA LIBRE; SE DEFENDERÁ A SÍ MISMA.</li>
   <span>"SI IN TE RADICES AMORIS SUNT, NIHIL ALIUD NISI BONUM EX TALI RADICE PROCEDERE POTEST."</span>
   <li>SI ESTÁ DENTRO DE TI LA RAÍZ DEL AMOR, NINGUNA OTRA COSA SINO EL BIEN PODRÁ SALIR DE TAL RAÍZ.</li>
   <span>"DEUS SEMPER CONATUR NOBIS BONA DARE, SED MANUS NOSTRAE NIMIS PLENAE SUNT AD ACCIPIENDUM."</span>
