--- a/oracion/01Estacion.html
+++ b/oracion/01Estacion.html
@@ -31,24 +31,24 @@
          <H2 class="titulo">ENLACES A TEMAS</H2>
          <ol>
            <li class="li"><a href="#01">DISPOCIONES PARA ACOGER LA GRACIA</a></li>
-           <li class="li"><a href="#02">MODELOS DE ORACIÓN</a></li>
+           <li class="li"><a href="#02"> ORACIÓN VOCAL</a></li>
            <li class="li"><a href="#03">PADRE NUESTRO</a></li>
            <li class="li"><a href="#04">AVE MARÍA</a></li>
            <li class="li"><a href="#05">ORACIÓN MENTAL</a></li>
            <li class="li"><a href="#06">ORACIÓN DE CONTEMPLACIÓN</a></li>
-           <li class="li"><a href="#07">ESTACIÓN 1</a></li>
-           <li class="li"><a href="#08">ESTACIÓN 1</a></li>
-           <li class="li"><a href="#09">ESTACIÓN 1</a></li>
-           <li class="li"><a href="#10">ESTACIÓN 1</a></li>
-           <li class="li"><a href="#11">ESTACIÓN 1</a></li>
-           <li class="li"><a href="#12">ESTACIÓN 1</a></li>
+           <li class="li"><a href="#07"></a></li>
+           <li class="li"><a href="#08"></a></li>
+           <li class="li"><a href="#09"></a></li>
+           <li class="li"><a href="#10"></a></li>
+           <li class="li"><a href="#11"></a></li>
+           <li class="li"><a href="#12"></a></li>
       
           </ol>
         </div>
       </section>
 <!-- ************************************************************ -->
 <section id="01">
-<p>
+
      <h1 class="titulo"> 1° ESTACIÓN</h1>
   <h2 class="subtitulo">DISPOSICIÓN PARA ACOGER LA GRACIA</h2>
 <ol>
@@ -57,8 +57,10 @@
   <li>LA ACCIÓN DEL ES</li>
   <li>EL SILENCIO</li>
 </ol>
+<p>
 <h4 class="titulo">1. LEX ORANDI LEX VIVENDI</h4>
-La oración y la conversión van juntas. La una lleva a la otra.
+<p>La oración y la conversión van juntas. La una lleva a la otra.</p>
+<p>La misa es un modelo de oración, y nos muestra que la primera acción es nuestro pedido de perdón, que nos indica el camino de la conversión</p>
 <h3 class="cita">"Si no eres persona de oración, no creo en la bondad de tus intenciones". José María Escribá</h3>
 <h3 class="cita">“La oración hará que un hombre deje de pecar, o el pecado incitará a un hombre a dejar de orar.”</h3>
 Teresa De Jesús, Francisco De Asís, etc. Cada santo es un maestro en la oración.
@@ -588,11 +590,10 @@ La necesidad de conocer al Señor es cada vez mayor, sin desesperación pero con
 </section>
 <!-- ******************************************************* -->
 <section id="06">
-  
 <H3 class="subtitulo">ORACIÓN DE CONTEMPLACIÓN</H3>
 La oración de contemplación llamada por ella oración de unión, está unida a los otros tipos de oración, los tipos de oración no están separados, pues a veces están unidos y en otras se pasa de una a otra. Es un proceso metodologico y gráfico que se usa para comprender mejor.
 </p>
-
+<p>La contemplación es estar ante la presencia del misterio, como estamos ante Dios y su misterio trinitario</p>
     </section>
     
     <!-- ************************************************************ -->
