--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -142,8 +142,7 @@
     <!-- ********************************************************************** -->
     <section id="02">
       <h2>SANTA</h2>
-      <p>a. Se dice que: ¡cómo esta iglesia llena de pecadores puede ser la iglesia de Jesucristo!a. Se dice que: ¡cómo
-        esta iglesia llena de pecadores puede ser la iglesia de Jesucristo! <br> <br>
+      <p>a. Se dice que: ¡cómo esta iglesia llena de pecadores puede ser la iglesia de Jesucristo!a.<br> <br>
 
         Mateo 9:12 <br>
         1. El Señor vino por los pecadores<br>
@@ -187,17 +186,26 @@
         1. La iglesia es donde convive el trigo con la cizaña.<br>
         2. La cizaña no es del reino<br><br>
 
-
-
-
         Efesios 5 25-29.<br>
         1. Cristo se entregó para santificarla<br><br>
 
+        Ef 3,8 Ef 1,1.4 <br>
+        1. A los santos<br>
+        2. La santidad como fin crsitiano<br><br>
+
+        Lc 15,32 15,7 <br>
+        1. Fiesta por un pecador que se convierte<br><br>
+
+        Jn 20,21<br>
+        1. Limpios por la confesión
       </p>
     </section>
     <!-- ********************************************************************** -->
     <section id="03">
       <h2>CATÓLICA</h2>
+      <p>
+        Mc 16,15 Mt 28,19 Lc 24,47 Jn20,21 Hch 1,8 Rom 1,5
+      </p>
       <p>Origen del nombre <br>
         La palabra católica viene del latín CATHOLICUS y este del griego KATHOLIKÓS. DE KATA (sobre, hacia abajo,
         contra) como se usa en catástrofe, cataclismo, catacumbas y OLOS (todo) se podría traducir a través del todo,
@@ -247,7 +255,7 @@
         Significado Teológico<br>
 
         Es católica porque Cristo está presente en ella y porque Él nos ha enviado en misión al mundo entero. A todos
-        los hombres en todo el mundo. Mateo 28 19-20 Marcos 16 15 Lucas 24 47 Juan 20 21 Hechos 1 8 Romanos 1 5
+        los hombres en todo el mundo. Mateo 28 19-20 Marcos 16, 15 Lucas 24, 47 Juan 20 ,21 Hechos 1, 8 Romanos 1 ,5 <br><br>
         EXTRA ECCLESIA NULA SALVIS significa que toda salvación viene de Cristo a través de su cuerpo, la iglesia.<br>
         Cristo es el único mediador entre Dios y los hombres. 1Timoteo 2 4-5<br>
         La misión es exigencia de la catolicidad de la iglesia, es hacer participar al hombre de la comunión que existe
@@ -341,6 +349,11 @@
         Si una mujer después de 15 años de muerto su marido tiene un hijo es seguro que no es de él, así 1500 años
         después de fundada la iglesia por Cristo nadie puede reclamar esa iglesia.<br><br>
       </p>
+      <p> Mc 3,13 LLamados para estar con Cristo y predicar<br>
+        Mt 18,20 donde 2 o 3 esten reunidos está cristo??? No, tienen que estar reunidos en su Nombre.<br>
+        Mt 7,21 Jn 17,21 Hch 2,42
+
+      </p>
     </section>
     <!-- ********************************************************************** -->
     <section id="05">
@@ -411,7 +424,7 @@
       <h2>CATÓLICA</h2> <br>
       <br>
       Es católica porque Cristo está presente en ella y porque Él nos ha enviado en misión al mundo entero. A todos los
-      hombres en todo el mundo. Mateo 28 19-20 Marcos 16 15 Lucas 24 47 Juan 20 21 Hechos 1 8 Romanos 1 5 <br>
+      hombres en todo el mundo. Mateo 28 19-20 Marcos 16, 15 Lucas 24, 47 Juan 20, 21 Hechos 1 ,8 Romanos 1 ,5 <br><br>
       EXTRA ECCLESIA NULA SALVIS significa que toda salvación viene de Cristo a través de su cuerpo, la iglesia. <br>
       Cristo es el único mediador entre Dios y los hombres. 1Timoteo 2 4-5 <br>
       La misión es exigencia de la catolicidad de la iglesia, es hacer participar al hombre de la comunión que existe
@@ -428,6 +441,7 @@
       la verdad. <br>
       <br>
       APOSTÓLICA <br>
+     <P>
       Está fundada sobre la fe de los apóstoles <br>
        En Efesios 2 20 cristo es la piedra y en Efesios 2 20 y 1Pedro 2 5 lo son los cristianos <br>
        Juan 10 11 Jesús es el buen pastor y en Juan 21 15-17 Pedro es el pastor <br>
@@ -460,6 +474,7 @@
       No basta tener la Biblia sino estar en la Iglesia de Cristo <br>
       <br>
       <br>
+     </P>
       EL PAPA <br>
       a. Sobre Pedro la piedra que eligió el Señor <br>
       Nos dicen que es eso del Papa, donde dice que Pedro fue Papa…… <br>
