--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -753,7 +753,7 @@
   <h2 class="titulo">LECTIO ¿Qué dijo el Señor?</h2>
   <ol> 
     <h2 class="subtitulo">ELEGIR EL TEXTO</h2>
-  
+  <p>Leer al menos estas versiones y elegir una básica, teniendo en cuenta las variantes</p>
     <OL class="cita">
       <LI >JERUSALÉN</LI>
       <LI>LATINOAMERICANA</LI>
@@ -765,25 +765,30 @@
       <li>otras</li>
     </OL>
     <h2 class="subtitulo">LA LECTURA DEL TEXTO</h2>
+    <ol>
+      <li>Tener presente la intencionalidad del Autor</li>
+      <li>Es Evangelio, Buena Noticia: Como relacionarlo con el contexto vital de los destinatarios</li>
+      <li> </li>
+    </ol>
     <h2 class="subtitulo">EL AUTOR</h2>
       <ol class="cita">
-        <li>PROFESIÓN</li>
+        <li>OCUPACIÓN</li>
         <li>LLAMAMIENTO-CONVERSIÓN</li>
         <li>MISIÒN</li>
         <li>VIDA</li>
       </ol>
     <h2 class="subtitulo">EL TEXTO </h2>
       <ol>
-        <li>PROPÓSITO DEL AUTOR</li>
-        <li>ORIGEN DEL TEXTO</li>
-        <li>FECHA DE COMPOSICIÓN</li>
-        <li>IDEAS CENTRALES DEL TEXTO</li>
+        <li class="cita">PROPÓSITO DEL AUTOR</li>
+        <li class="cita">ORIGEN DEL TEXTO</li>
+        <li class="cita">FECHA DE COMPOSICIÓN</li>
+        <li class="cita">IDEAS CENTRALES DEL TEXTO</li>
       </ol>
     <h2 class="subtitulo">CONTEXTO DE LOS DESTINATARIOS</h2>
       <ol>
-        <li>FACTORES INTERNOS</li>
-        <li>FACTORES EXTERNOS </li>
-        <li>QUÉ EXPECTATIVAS TENIAN</li>
+        <li class="cita">FACTORES INTERNOS</li>
+        <li class="cita">FACTORES EXTERNOS </li>
+        <li class="cita">QUÉ EXPECTATIVAS TENIAN</li>
       </ol>
     <h2 class="subtitulo">GÉNERO LITERARIO</h2>
     <h2 class="subtitulo">COMENTARIOS PATRÍSTICOS</h2>
@@ -794,34 +799,36 @@
 <!-- ****************************************************************** -->
 <section id="02">
   <h2 class="subtitulo">MEDITATIO ¿Qué me dice el Señor?</h2>
-    <h2 class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</h2>
-    <h2 class="cita">RELACIÓN DE LOS DESTINATARIOS Y NOSOTROS</h2>
-    <h2 class="cita">QUE ME DICE A MI/NOSOTROS</h2>
-    <h2 class="cita">ARMONIA CON LO ANTERIORMENTE ORADO</h2>
+  <ol>
+    <li class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</li>
+    <li class="cita">RELACIÓN DE LOS DESTINATARIOS Y NOSOTROS</li>
+    <li class="cita">QUE ME DICE A MI/NOSOTROS</li>
+    <li class="cita">ARMONIA CON LO ANTERIORMENTE ORADO</li>
+  </ol>
 </section>
 <!-- ****************************************************************** -->
 <section id="03">
   <h2 class="subtitulo">ORATIO ¿Qué respondo al Señor?</h2>
   <ol> 
-    <h2 class="cita">RESPUESTAS A TRAVÉS DEL TIEMPO: LOS SANTOS</h2>
-    <h2 class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</h2>
-    <h2 class="cita">RESPUESTAS DE MI ENTORNO</h2>
-    <h2 class="cita">MI RESPUESTA</h2>
-    <h2 class="cita">COMO HACERLA REALIDAD Y VIDA</h2>
+    <li class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</li>
+    <li class="cita">RESPUESTAS A TRAVÉS DEL TIEMPO: LOS SANTOS</li>
+    <li class="cita">RESPUESTAS DE MI ENTORNO</li>
+    <li class="cita">MI RESPUESTA</li>
+    <li class="cita">COMO HACERLA REALIDAD Y VIDA</li>
   </ol>
 </section>
 <!-- ****************************************************************** -->
 <section id="04">
   <h2 class="subtitulo">CONTEMPLATIO ¿Qué me muestra el Señor?</h2>
   <ol>
-    <li>COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
-    <li>MODELO DE CONVERSIÓN</li>
-    <li>COMO ME AYUDA A COMPRENDER MEJOR LOS TEXTOS </li>
-    <li>COMO ME AYUDA A CONOCER MEJOR AL SEÑOR</li>
-    <li>COMO APLICARLO A TODAS MIS REALIDADES</li>
-    <li>COMO COMPARTIRLO</li>
-    <li>CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
-    <li>HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
+    <li class="cita">COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
+    <li class="cita">MODELO DE CONVERSIÓN</li>
+    <li class="cita">COMO ME AYUDA A COMPRENDER MEJOR LOS TEXTOS </li>
+    <li class="cita">COMO ME AYUDA A CONOCER MEJOR AL SEÑOR</li>
+    <li class="cita">COMO APLICARLO A TODAS MIS REALIDADES</li>
+    <li class="cita">COMO COMPARTIRLO</li>
+    <li class="cita">CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
+    <li class="cita">HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
   </ol>
 </section>
 <!-- ****************************************************************** -->
