--- a/lectio/marcos.html
+++ b/lectio/marcos.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF8">
     <meta name="viewport" content="width=devicewidth, initialscale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>NOVICIADO</title>
   </head>
-
   <body>
     <p id="alInicio" class="principio"></p>
     <header>
@@ -17,14 +15,25 @@
         <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
         <a href="../index.html" class="nombre">INICIO </a>
     </header> <br><br>
-    <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
-    <h3><b>Tanto el que evangeliza como los que escuchen, crezcan en el amor de Dios</b></h3>
-    <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+    <!-- ********************************************************** -->
+    <h1 class="init">SAN MARCOS </h1>
+      <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
     <ol>
-      <li class="li"><a href="0">INTRODUCCIÓN</a></li>
-      <li class="li"><a href="#4.35-41">Mt 4.35-41</a></li>
+      <li class="li"><a href="#0">INTRODUCCIÓN</a></li>
+      <H2 class="subtitulo">01</H2>
+      <li class="li"><a href="#010108">Predicación de Juan 01,01-08</a></li>
+      <li class="li"><a href="#010911">El bautismo de Jesús 01,09-11</a></li>
+      <li class="li"><a href="#011213">Tentaciones en el desierto 01,12-13</a></li>
+      <li class="li"><a href="#011415">Jesús inicia su predicación 01,14-15</a></li>
+      <li class="li"><a href="#011620">Jesús llama a sus primeros discípulos. 01,16-20</a></li>
+      <li class="li"><a href="#012128">Enseña en Cafarnaúm y sana a un endemoniado 01,21-28</a></li>
+      <li class="li"><a href="#012931">Curación de la suegra de Simón 01,29-31</a></li>
+      <li class="li"><a href="#013234">>Numerosas curaciones 01,32-34</a></li>
+      <li class="li"><a href="#013539">Sale ocultamente de Cafarnaúm y recorre Galilea 01,35-39</a></li>
+      <li class="li"><a href="#014041">Curación de un leproso 01,40-41</a></li>
+      <H2 class="subtitulo">04</H2>
+      <li class="li"><a href="#043541"> 4,35-41</a></li>
     
     </ol>
     </div>
@@ -81,8 +90,9 @@
 En resumen, la datación del Evangelio de Marcos se sitúa generalmente entre los años 65 y 75 d.C., con una tendencia a ubicarlo más cerca del año 70 d.C., en relación con la destrucción del Templo de Jerusalén. La combinación de evidencia interna y externa, junto con el contexto histórico de persecuciones y consolidación de la iglesia primitiva, apoya esta datación.
 </p>
 <!-- ************************************************* -->
-<h2 class="subtitulo">Situación de la comunidad  </h2>
+<h2 class="subtitulo">Destinatarios y Situación de la comunidad  </h2>
 <p>
+  <p> Al decir el Cristo, (Mc1,1) y mencionar al profeta isaias, en el siguiente versiculo, hace pensar que se dirigia a una audiencia judia, o paganos que ya leian las escrituras.</p>
 La comunidad a la que se cree que Marcos escribió su Evangelio enfrentaba una serie de desafíos y circunstancias específicas que influenciaron la redacción y el contenido de su obra. Algunos aspectos de la situación de la comunidad a
 la que se atribuye la autoría del Evangelio de Marcos incluyen: <br><br>
 <b>• Persecución y adversidad:</b> Se cree que la comunidad estaba experimentando persecución y adversidad por su fe en Jesucristo, lo que se refleja en el énfasis de Marcos en el sufrimiento y la persecución de Jesús y sus seguidores.<br><br>
@@ -91,6 +101,7 @@ la que se atribuye la autoría del Evangelio de Marcos incluyen: <br><br>
 <b>• Énfasis en la acción y la prontitud:</b> Marcos resalta la acción inmediata de Jesús y la urgencia de su ministerio, posiblemente para inspirar a la comunidad a ser diligente y activa en su fe en un entorno desafiante.
 En resumen, la situación de la comunidad a la que se atribuye la redacción del Evangelio de Marcos era probablemente una de persecución, adversidad y la necesidad de fortaleza y resistencia en la fe, aspectos que se reflejan en el tono y el contenido del Evangelio.
 </p>
+
 <!-- ************************************************* -->
 <h2 class="subtitulo">Motivación de Escribir el Evangelio</h2>
 <p>
@@ -143,19 +154,121 @@ En resumen, la motivación detrás de la escritura del Evangelio de Marcos por M
 </p>
      </section>
     <!-- /////////////////////////////////////////////// -->
-<section id="4.35-41">
+<section id="010108">
+  <h2>PREPARACIÓN DEL MINISTERIO DEL SEÑOR 1,1-13</h2>
+  <h2 class="subtitulo">Predicación de Juan 01,01-08 </h2>
+  <p>
+  Texto: (NBJ)<br>
+Marcos 1:1-8 <br>
+1. Comienzo de la Buena Nueva de Jesús, el Cristo, Hijo de Dios. <br> 
+2. Como está escrito en el profeta Isaías:  <br>
+    “Mira, yo envío a mi mensajero delante de ti,<br>  
+    que preparará tu camino;  <br>
+3. Voz del que clama en el desierto:<br>  
+    Preparad el camino del Señor,  <br>
+    enderezad sus senderos”.  <br>
+4. Juan bautizaba en el desierto, predicando un bautismo de conversión para el perdón de los pecados.  <br>
+5. Toda la región de Judea y todos los habitantes de Jerusalén acudían a él, y se hacían bautizar por él en el río Jordán, confesando sus pecados. <br> 
+6. Juan iba vestido de pelo de camello, con un cinturón de cuero en la cintura, y comía langostas y miel silvestre.  <br>
+7. Y predicaba, diciendo: “Después de mí, viene uno más poderoso que yo, y no soy digno de desatar, inclinándome, la correa de sus sandalias. <br> 
+8. Yo os he bautizado con agua, pero él os bautizará con el Espíritu Santo”.<br><br>
+ 1. Versículo 1: El "comienzo del Evangelio"
+Este primer versículo actúa como el título del Evangelio de Marcos, destacando a Jesús como el Cristo (el Mesías) y Hijo de Dios. Marcos anuncia inmediatamente la identidad divina de Jesús. A diferencia de los otros evangelios sinópticos, Marcos no presenta una genealogía ni un relato del nacimiento, sino que entra directamente en la misión de Jesús. Al decir el Cristo, y mencionar al profeta isaias, en el siguiente versiculo, hace pensar que se dirigia a una audiencia judia, o paganos que ya leian las escrituras.<br><br>
+
+ 2. Versículos 2-3: La cita profética<br><br>
+Marcos cita una mezcla de Malaquías 3:1 y Isaías 40:3 para señalar que el ministerio de Juan el Bautista cumple las profecías del Antiguo Testamento. Juan es el "mensajero" que prepara el camino para el Señor, cumpliendo las Escrituras que anunciaban la llegada del Mesías.<br><br>
+
+- Malaquías 3:1: "He aquí que envío mi mensajero delante de ti, que preparará el camino".<br>
+- Isaías 40:3: "Voz del que clama en el desierto: preparad el camino del Señor, enderezad sus senderos".<br>
+
+Juan aparece como la voz profética que anuncia y prepara el camino para el Mesías, invitando a los judíos a la conversión.<br><br>
+
+ 3. Versículo 4: El bautismo de Juan<br>
+Juan está bautizando en el desierto, predicando un bautismo de arrepentimiento para el perdón de los pecados. Este bautismo simboliza una preparación espiritual para recibir al Mesías. La figura de Juan en el desierto es significativa, ya que en la tradición bíblica el desierto es un lugar de prueba y purificación.<br><br>
+
+- El bautismo de Juan es un acto de conversión en preparación para el reino de Dios. Es simbólico y prefigura el bautismo de Jesús, que será con el Espíritu Santo.<br><br>
+
+ 4. Versículo 5: Gran afluencia de gente<br>
+El éxito del ministerio de Juan es notable. Todo Judea y Jerusalén acuden a él, mostrando una profunda necesidad espiritual en el pueblo. El acto de confesar sus pecados y ser bautizados revela que el mensaje de Juan impacta a la población, llamando a un cambio profundo en sus vidas.<br><br>
+
+ 5. Versículo 6: Vestimenta y dieta de Juan<br>
+La descripción de la vestimenta y dieta de Juan el Bautista recuerda a la figura de Elías, otro gran profeta del Antiguo Testamento. El pelo de camello y el cinturón de cuero (ver 2 Reyes 1:8) lo relacionan con Elías, quien también era un profeta que se enfrentaba a tiempos de crisis espiritual. La conexión entre Juan y Elías es importante porque el profeta Malaquías anunció que Elías volvería antes del Día del Señor (Mal 4:5-6).<br><br>
+
+- Langostas y miel silvestre: La dieta austera de Juan simboliza su renuncia a las comodidades y su enfoque en la misión de preparar el camino para el Señor.
+<br><br>
+ 6. Versículo 7: La predicación de Juan<br>
+Juan el Bautista proclama la venida de alguien mucho más poderoso que él. Reconoce su humildad al decir que no es digno ni de desatar las correas de las sandalias de aquel que vendrá. Esta es una referencia a un trabajo reservado para esclavos, lo que subraya la grandeza del Mesías en comparación con Juan. Esta declaración refuerza que Juan es solo el precursor, mientras que Jesús será el verdadero Salvador.<br><br>
+
+ 7. Versículo 8: Diferencia entre los bautismos<br>
+Juan distingue entre su bautismo, que es con agua y un símbolo externo de conversión, y el bautismo del que vendrá después, que será con el Espíritu Santo. Esta promesa del Espíritu anticipa el Pentecostés (Hechos 2), cuando el Espíritu Santo será derramado sobre los seguidores de Jesús.<br><br>
+
+ Interpretación teológica y espiritual:<br><br>
+
+- Jesús como el Hijo de Dios: El Evangelio comienza declarando la identidad de Jesús como el Hijo de Dios. Esto es fundamental para la cristología de Marcos: Jesús es más que un maestro o profeta; es el mismo Hijo de Dios.<br>
+- Juan el Bautista como precursor: Juan no solo llama al arrepentimiento, sino que anuncia la llegada inminente de la salvación. Su humildad y misión profética preparan a las personas para el encuentro con Cristo.<br>
+- El bautismo y la conversión: El tema del bautismo en esta perícopa subraya la importancia de la purificación espiritual como preparación para el encuentro con el Señor. Aunque el bautismo de Juan es simbólico, apunta al bautismo que Jesús instituirá, el cual trae el Espíritu Santo y transforma la vida del creyente.<br>
+  
+ Aplicación en la vida cristiana:<br>
+
+1. Llamado a la conversión: Juan nos recuerda la necesidad de prepararnos espiritualmente para recibir a Cristo, lo que implica una conversión genuina, la confesión de nuestros pecados y la búsqueda del perdón.<br>
+2. Humildad: La actitud de Juan, reconociendo que no es digno de desatar las sandalias de Jesús, nos invita a la humildad y al reconocimiento de la grandeza de Dios en nuestra vida.<br>
+3. Apertura al Espíritu Santo: Juan anuncia un bautismo en el Espíritu Santo. Como cristianos, estamos llamados a abrirnos a la acción del Espíritu Santo en nuestras vidas, permitiendo que Él nos transforme y nos guíe en nuestro caminar con Dios.<br>
+
+Este pasaje es un preludio importante a los eventos que seguirán en el Evangelio de Marcos, estableciendo el escenario para la manifestación de Jesús como el Mesías y el Hijo de Dios.
+
+  </p>
+</section>
+    <!-- ********************************************* -->
+<section id="010911">
+  <h2 class="subtitulo">El bautismo de Jesús 010911</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="011213">
+  <h2 class="subtitulo">Tentaciones en el desierto 011213</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="011415">
+  <h2 class="subtitulo">MINISTERIO DE JESÚS EN GALILEA 1,14-45</h2>
+  <h2 class="subtitulo">Jesús inicia su predicación 011415</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="011620">
+  <h2 class="subtitulo">Jesús llama a sus primeros discípulos. 011620</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="012128">
+  <h2 class="subtitulo">Jesús enseña en Cafarnaúm y sana a un endemoniado 012128</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="012931">
+  <h2 class="subtitulo">Curación de la suegra de Simón 012931</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="013234">
+  <h2 class="subtitulo">Numerosas curaciones 013234</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="013539">
+  <h2 class="subtitulo">Jesús sale ocultamente de Cafarnaúm y recorre Galilea 013539</h2>
+</section>
+    <!-- ********************************************* -->
+<section id="014041">
+  <h2 class="subtitulo">Curación de un leproso 014041</h2>
+</section>
+    <!-- /////////////////////////////////////////////// -->
+<section id="043541">
   <div>
     <h2>MARCOS 4.35-41</h2>
 <ol>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <H2 class="subtitulo">LECTIO</H2>
+  <li>DETERMINAR LA PERÍCOPA</li>
+  <li>VERSIONES </li>
+  <li>CONTEXTOS </li>
+  <li>TEMAS</li>
   <li></li>
   <li></li>
   <li></li>
 </ol>
-
     <p>
 
 <h2 class="subtitulo">LECTIO <br>QUE DIJO EL TEXTO</h2>
